syntax = "proto3";
package proto.greeter.v1;
option java_package = "com.jviniciusb.hellogrpc.proto";
option java_multiple_files = true;

service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloToStream (stream HelloRequest) returns (HelloReply) {}
    rpc SayStreamHello (HelloRequest) returns (stream HelloReply) {}
    rpc SayStreamHelloToStream (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}